--- a/src/sass/variables/_vars.scss
+++ b/src/sass/variables/_vars.scss
@@ -1,4 +1,6 @@
 $BG_color:#E1F3FD;
+$BG_color2:#F8FFFF;
+$BG_color3:#211D25;
 $Font_color:#0FCFDC;
-
+$hover:#0DB9C4;
 $max_mobile:"max-width:575px";
